# AI-HuggingFace-Test

./: .env.sample  .gitignore  README.md  main.py  pyproject.toml
