[project]
name = "ai-agent-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Mike Shmygel",email = "m.shmygel@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain (>=0.3.21,<0.4.0)",
    "wikipedia (>=1.4.0,<2.0.0)",
    "langchain-community (>=0.3.20,<0.4.0)",
    "langchain-openai (>=0.3.11,<0.4.0)",
    "langchain-anthropic (>=0.3.10,<0.4.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "huggingface-hub (>=0.29.3,<0.30.0)",
    "langchain-huggingface (>=0.1.2,<0.2.0)",
    "transformers (>=4.50.2,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
